--- a/resources/sass/blocks/_prize.scss
+++ b/resources/sass/blocks/_prize.scss
@@ -2,4 +2,12 @@ section#prize {
     background: url("/assets/prizebg.png") no-repeat center/contain;
     height: 100vh;
     position: relative;
+    .wrapper {
+        .title {
+            font-size: 5.2rem;
+            color: #552100;
+            text-align: center;
+            font-weight: 700;
+        }
+    }
 }
