--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,6 +31,12 @@ p {
     margin: 0;
 }
 
+.title {
+    font-size: 5.2rem;
+    color: #552100;
+    text-align: center;
+    font-weight: 700;
+}
 @media only screen and (max-width: 1599px) {
     html{
         font-size: 9px;
@@ -71,3 +77,4 @@ p {
 @import "blocks/footer";
 @import "blocks/hero";
 @import "blocks/prize";
+@import "blocks/share";
