--- a/resources/sass/blocks/_hero.scss
+++ b/resources/sass/blocks/_hero.scss
@@ -5,10 +5,7 @@ section#hero {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        .title {
-            color: #532f1c;
-            font-size: 6rem;
-        }
+        margin-top: 5rem;
         .btn-danger {
             width: 32rem;
             height: 8rem;
