--- a/resources/sass/blocks/_footer.scss
+++ b/resources/sass/blocks/_footer.scss
@@ -1,5 +1,5 @@
 footer.footer {
-    background: url("/assets/footerbg.png");
+    background: url("/assets/footerbg.png") center no-repeat;
 
     .content {
         display: flex;
