--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@
 html {
   font-size: 10px;
   overflow-x: hidden;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "EBA-DINPro-CondensedBold";
 }
 
 body {
@@ -12,7 +12,6 @@ body {
   max-width: 100%;
   color: white;
   background-color: #ffcc00;
-  overflow-x: hidden;
 }
 
 * {
@@ -37,6 +36,55 @@ p {
   font-size: 5.2rem;
   color: #552100;
   text-align: center;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.amount-1 {
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 3rem;
+  gap: 1rem;
+  width: 23rem;
+  height: 7.7rem;
+  background-color: #ffcc00;
+  border-radius: 1rem;
+  border: 1px solid white;
+}
+.amount-1 .size {
+  font-size: 3.2rem;
+  font-weight: 700;
+}
+.amount-1 span {
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
+  font-weight: 700;
+}
+
+.amount-2 {
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 3rem;
+  gap: 1rem;
+  width: 18rem;
+  height: 7.7rem;
+  background-color: #ff000a;
+  border-radius: 1rem;
+  border: 1px solid white;
+}
+.amount-2 .size {
+  font-size: 3.2rem;
+  font-weight: 700;
+}
+.amount-2 span {
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
   font-weight: 700;
 }
 
@@ -96,7 +144,7 @@ header.header .wrapper .nav .nav-link a:hover {
 }
 
 footer.footer {
-  background: url("/assets/footerbg.png");
+  background: url("/assets/footerbg.png") center no-repeat;
 }
 footer.footer .content {
   display: flex;
@@ -124,7 +172,7 @@ footer.footer .copyright {
 }
 
 section#hero {
-  height: 90vh;
+  height: 83vh;
 }
 section#hero .wrapper {
   display: flex;
@@ -150,6 +198,13 @@ section#prize {
   position: relative;
   display: flex;
   align-items: center;
+  position: relative;
+}
+section#prize .frame {
+  position: absolute;
+  top: 8rem;
+  z-index: -1;
+  width: 100%;
 }
 section#prize .container {
   margin-top: 5rem;
@@ -165,29 +220,6 @@ section#prize .container .content .prizes {
   justify-content: center;
   align-items: center;
 }
-section#prize .container .content .prizes .amount {
-  margin-top: 4rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 3rem;
-  gap: 1rem;
-  width: 23rem;
-  height: 7.7rem;
-  background-color: #ff0009;
-  border-radius: 1rem;
-  border: 1px solid white;
-}
-section#prize .container .content .prizes .amount .size {
-  font-size: 3.2rem;
-  font-weight: 700;
-}
-section#prize .container .content .prizes .amount span {
-  text-transform: uppercase;
-  padding: 0;
-  margin: 0;
-  font-weight: 700;
-}
 section#prize .container .content .prizes .prize_img {
   max-height: 27rem;
 }
@@ -198,30 +230,361 @@ section#prize .container .content .prizes .prize_name {
   text-transform: uppercase;
 }
 
+section#share {
+  position: relative;
+}
 section#share .container .info {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 section#share .container .info .content {
+  margin-top: 3rem;
   border: 1px solid white;
-  width: 30rem;
-  height: 25rem;
+  width: 38rem;
+  height: 27rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 1rem;
 }
-section#share .container .info .content .share_img {
+section#share .container .info .content .share_img_1 {
   width: 100%;
+  position: relative;
+  top: 2rem;
+  left: 2rem;
+}
+section#share .container .info .content .share_img_2 {
+  width: 70%;
+  position: relative;
+  left: 2rem;
+  top: 2rem;
+}
+section#share .container .info .content .share_img_3 {
+  width: 70%;
+  position: relative;
+  left: 6rem;
+  top: 1.33rem;
+}
+section#share .container .info .content .description {
+  background-color: #FFF;
+  color: #552100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 9rem;
+  position: relative;
+  bottom: 10.6rem;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 0 1rem;
+}
+section#share .container .info .content .description.description-2 {
+  bottom: 3.4rem;
+}
+section#share .container .info .content .description.description-3 {
+  bottom: 8.2rem;
+  z-index: -1;
 }
 section#share .container .scan {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 3rem 0;
+  position: relative;
+  padding: 4rem;
 }
 section#share .container .scan .scan_img {
-  max-width: 30rem;
+  max-width: 25rem;
 }
 section#share .container .scan .attention {
   font-size: 3.2rem;
   text-transform: uppercase;
   color: #552100;
   text-align: center;
+}
+section#share .container .scan .arrow_left {
+  position: absolute;
+  bottom: -5rem;
+  left: 14%;
+  z-index: 2;
+}
+section#share .container .scan .arrow_right {
+  position: absolute;
+  bottom: -5rem;
+  right: 14%;
+  z-index: 2;
+}
+section#share .container .info_2 {
+  display: flex;
+  justify-content: center;
+  gap: 2.5rem;
+}
+section#share .container .info_2 .content {
+  border: 1px solid white;
+  width: 42rem;
+  height: 27rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 1rem;
+}
+section#share .container .info_2 .content .share_img_4 {
+  width: 70%;
+  position: relative;
+  left: 4rem;
+  top: 2rem;
+}
+section#share .container .info_2 .content .share_img_5 {
+  width: 100%;
+  position: relative;
+}
+section#share .container .info_2 .content .description {
+  background-color: #FFF;
+  color: #552100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 10.5rem;
+  position: relative;
+  bottom: 16.2rem;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 0 1rem;
+}
+section#share .container .info_2 .content .description.description-4 {
+  bottom: 13.2rem;
+}
+section#share .container .info_2 .content .description.description-5 {
+  bottom: 13rem;
+}
+section#share .container .btn-danger {
+  width: 32rem;
+  height: 8rem;
+  font-size: 4.4rem;
+  background-color: #ff000a;
+  border-radius: 1.8rem;
+  outline: none;
+  border: none;
+  box-shadow: 0px 7px 20px 2px rgba(0, 0, 0, 0.7);
+  display: block;
+  margin: 4rem auto;
+}
+section#share .frame {
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+}
+
+section#winners {
+  position: relative;
+}
+section#winners .container .form {
+  margin: 4rem auto;
+  width: 40rem;
+}
+section#winners .container .form .form-group {
+  display: flex;
+  align-items: center;
+  position: relative;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  z-index: 1;
+}
+section#winners .container .form .form-group input {
+  font-size: 3.2rem;
+  margin-bottom: unset;
+  padding: 1.1rem 4rem;
+  width: 85%;
+  border-radius: 1rem;
+}
+section#winners .container .form .form-group div .btn {
+  position: relative;
+  left: -4rem;
+  background-color: #ff000a;
+  border: unset;
+  border-radius: 1rem;
+  cursor: pointer;
+  height: 7.7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 9rem;
+  transition: all 0.4s ease-in-out;
+}
+section#winners .container .form .form-group .btn .icon.search {
+  background: url("/assets/icons/search_icon.png") 50%/contain no-repeat;
+  width: 5.6rem;
+  height: 5.6rem;
+}
+section#winners .container .table {
+  width: 86.5rem;
+  margin: 0 auto;
+}
+section#winners .container .table .table_nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+section#winners .container .table .table_nav .winners {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 3.2rem;
+  width: 42rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem 1rem 0 0;
+  border-top: 1px solid #fff;
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+  height: 7rem;
+}
+section#winners .container .table .table_nav .winners.yellow {
+  color: #552100;
+  background-color: #ffcc00;
+}
+section#winners .container .table .table_nav .winners.red {
+  color: #fff;
+  background-color: #ff0009;
+}
+section#winners .container .table .table_head {
+  font-size: 2.4rem;
+  color: #552100;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 1rem;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+}
+section#winners .container .table .table_head > div {
+  text-transform: uppercase;
+  font-weight: 700;
+}
+section#winners .container .table .table_data {
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  position: relative;
+}
+section#winners .container .table .table_data .table_body .rows {
+  display: flex;
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  color: #552100;
+  align-items: center;
+  justify-content: space-around;
+}
+section#winners .container .table .table_data .yellow_img {
+  position: absolute;
+  top: 0;
+  max-width: 28rem;
+  left: -19.2rem;
+}
+section#winners .container .title {
+  font-size: 4.3rem;
+}
+section#winners .container .prizes {
+  max-width: 74rem;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+section#winners .container .btn-danger {
+  width: 32rem;
+  height: 8rem;
+  font-size: 4.4rem;
+  background-color: #ff000a;
+  border-radius: 1.8rem;
+  outline: none;
+  border: none;
+  box-shadow: 0px 7px 20px 2px rgba(0, 0, 0, 0.7);
+  display: block;
+  margin: 4rem auto;
+}
+
+section#FAQ .description {
+  font-size: 2.7rem;
+  color: #532f1c;
+  font-weight: 700;
+  text-align: center;
+  max-width: 119rem;
+}
+section#FAQ .form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 86.5rem;
+  margin: 0 auto;
+}
+section#FAQ .form .user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  gap: 1.3rem;
+}
+section#FAQ .form .user input {
+  width: 28rem;
+  height: 5rem;
+  padding-left: 2rem;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+section#FAQ .form .user input::-moz-placeholder {
+  color: #b8b8b8;
+}
+section#FAQ .form .user input:-ms-input-placeholder {
+  color: #b8b8b8;
+}
+section#FAQ .form .user input::placeholder {
+  color: #b8b8b8;
+}
+section#FAQ .form textarea {
+  margin-top: 2rem;
+  width: 100%;
+  border-radius: 1rem;
+  height: 14rem;
+  font-size: 2.8rem;
+  font-weight: 700;
+  padding-left: 2rem;
+}
+section#FAQ .form textarea::-moz-placeholder {
+  color: #b8b8b8;
+}
+section#FAQ .form textarea:-ms-input-placeholder {
+  color: #b8b8b8;
+}
+section#FAQ .form textarea::placeholder {
+  color: #b8b8b8;
+}
+section#FAQ .form .btn {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-left: 1.5rem;
+}
+section#FAQ .form .btn .btn-danger {
+  width: 20rem;
+  height: 4.7rem;
+  font-size: 2.8rem;
+  background-color: #ff000a;
+  border-radius: 1.2rem;
+  outline: none;
+  border: none;
+  box-shadow: 0px 7px 20px 1px rgba(0, 0, 0, 0.5);
+  margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
