--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
+
 html {
     font-size: 10px;
     overflow-x: hidden;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'EBA-DINPro-CondensedBold';
 }
 
 body {
@@ -12,7 +13,7 @@ body {
     max-width:100%;
     color: white;
     background-color: #ffcc00;
-    overflow-x: hidden;
+    //overflow-x: hidden;
 }
 
 * {
@@ -36,6 +37,53 @@ p {
     color: #552100;
     text-align: center;
     font-weight: 700;
+    text-transform: uppercase;
+}
+.amount-1 {
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 3rem;
+    gap: 1rem;
+    width: 23rem;
+    height: 7.7rem;
+    background-color: #ffcc00;
+    border-radius: 1rem;
+    border: 1px solid white;
+    .size {
+        font-size: 3.2rem;
+        font-weight: 700;
+    }
+    span {
+        text-transform: uppercase;
+        padding: 0;
+        margin: 0;
+        font-weight: 700;
+    }
+}
+.amount-2 {
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 3rem;
+    gap: 1rem;
+    width: 18rem;
+    height: 7.7rem;
+    background-color: #ff000a;
+    border-radius: 1rem;
+    border: 1px solid white;
+    .size {
+        font-size: 3.2rem;
+        font-weight: 700;
+    }
+    span {
+        text-transform: uppercase;
+        padding: 0;
+        margin: 0;
+        font-weight: 700;
+    }
 }
 @media only screen and (max-width: 1599px) {
     html{
@@ -78,3 +126,5 @@ p {
 @import "blocks/hero";
 @import "blocks/prize";
 @import "blocks/share";
+@import "blocks/winners";
+@import "blocks/faq";
