--- a/resources/sass/blocks/_footer.scss
+++ b/resources/sass/blocks/_footer.scss
@@ -1,6 +1,9 @@
 footer.footer {
-    background: url("/assets/footerbg.png") center no-repeat;
-
+    background-image: url("/assets/footerbg.png") ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 2rem 0 1rem 0;
     .content {
         display: flex;
         justify-content: space-between;
