--- a/public/css/app.css
+++ b/public/css/app.css
@@ -144,7 +144,11 @@ header.header .wrapper .nav .nav-link a:hover {
 }
 
 footer.footer {
-  background: url("/assets/footerbg.png") center no-repeat;
+  background-image: url("/assets/footerbg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 2rem 0 1rem 0;
 }
 footer.footer .content {
   display: flex;
@@ -193,7 +197,10 @@ section#hero .wrapper .btn-danger {
 }
 
 section#prize {
-  background: url("/assets/prizebg.png") no-repeat center/contain;
+  background-image: url("/assets/prizebg.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   height: 100vh;
   position: relative;
   display: flex;
@@ -230,6 +237,53 @@ section#prize .container .content .prizes .prize_name {
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 562px) {
+  section#prize {
+    margin-top: 27rem !important;
+  }
+  section#prize .container .content {
+    flex-direction: column !important;
+  }
+}
+@media screen and (max-width: 562px) {
+  section#share {
+    margin-top: 40rem !important;
+  }
+  section#share .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .info {
+    flex-direction: column !important;
+  }
+
+  .scan {
+    flex-direction: column !important;
+    padding: 0 !important;
+  }
+  .scan .attention {
+    order: -1;
+    font-size: 2rem !important;
+    margin-bottom: 2rem;
+  }
+  .scan .scan_img {
+    max-width: 32rem !important;
+  }
+  .scan .arrow_left {
+    bottom: 11rem !important;
+    left: 9% !important;
+  }
+  .scan .arrow_right {
+    bottom: -7rem !important;
+    right: 10% !important;
+  }
+
+  .info_2 {
+    flex-direction: column !important;
+    align-items: center;
+  }
+}
 section#share {
   position: relative;
 }
@@ -396,6 +450,7 @@ section#winners .container .form .form-group {
   flex-wrap: nowrap;
   justify-content: space-between;
   z-index: 1;
+  margin-left: 2rem;
 }
 section#winners .container .form .form-group input {
   font-size: 3.2rem;
@@ -406,7 +461,7 @@ section#winners .container .form .form-group input {
 }
 section#winners .container .form .form-group div .btn {
   position: relative;
-  left: -4rem;
+  left: -2rem;
   background-color: #ff000a;
   border: unset;
   border-radius: 1rem;
@@ -510,6 +565,14 @@ section#winners .container .btn-danger {
   margin: 4rem auto;
 }
 
+@media screen and (max-width: 562px) {
+  section#winners {
+    font-size: 0.5vmin !important;
+  }
+  section#winners .yellow_img {
+    display: none !important;
+  }
+}
 section#FAQ .description {
   font-size: 2.7rem;
   color: #532f1c;
@@ -517,12 +580,47 @@ section#FAQ .description {
   text-align: center;
   max-width: 119rem;
 }
+section#FAQ .faq.active .answer {
+  max-height: 30rem;
+}
+section#FAQ .question {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+section#FAQ .question svg {
+  transform: rotate(-90deg);
+}
+section#FAQ .question h3 {
+  color: #532f1c;
+  font-size: 2.6rem;
+  font-weight: 700;
+}
+section#FAQ .faq {
+  max-width: 86.5rem;
+  margin: 0 auto;
+  margin-top: 3rem;
+  cursor: pointer;
+}
+section#FAQ .answer {
+  max-height: 0;
+  overflow: hidden;
+  margin-bottom: 2rem;
+}
+section#FAQ .answer p {
+  color: #532f1c;
+  font-size: 2.2rem;
+  font-weight: 700;
+  margin-left: 5.4rem;
+  margin-bottom: 2rem;
+}
 section#FAQ .form {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 86.5rem;
   margin: 0 auto;
+  margin-top: 2rem;
 }
 section#FAQ .form .user {
   display: flex;
