--- a/resources/sass/blocks/_winners.scss
+++ b/resources/sass/blocks/_winners.scss
@@ -11,6 +11,7 @@ section#winners {
                 flex-wrap: nowrap;
                 justify-content: space-between;
                 z-index: 1;
+                margin-left: 2rem;
                 input {
                     font-size: 3.2rem;
                     margin-bottom: unset;
@@ -21,7 +22,7 @@ section#winners {
                 div {
                     .btn {
                         position: relative;
-                        left: -4rem;
+                        left: -2rem;
                         background-color: #ff000a;
                         border: unset;
                         border-radius: 1rem;
@@ -132,6 +133,14 @@ section#winners {
             box-shadow: 0px 7px 20px 2px rgba(0, 0, 0, .7);
             display: block;
             margin: 4rem auto;
+        }
+    }
+}
+@media screen and (max-width: 562px) {
+    section#winners {
+        font-size: 0.5vmin  !important;
+        .yellow_img {
+            display: none !important;
         }
     }
 }
