--- a/resources/sass/blocks/_footer.scss
+++ b/resources/sass/blocks/_footer.scss
@@ -29,3 +29,39 @@ footer.footer {
         padding-bottom: 1rem;
     }
 }
+@media screen and (max-width: 562px) {
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+
+    }
+    .content {
+        flex-direction: column;
+        text-align: center;
+        font-size: 2.1rem !important;
+        font-weight: 700;
+        gap: 2rem !important;
+        .info {
+            line-height: normal;
+            span {
+                width: 100%;
+                display: block;
+            }
+        }
+    }
+    .nav {
+
+        order:2;
+        ul {
+            flex-wrap: wrap !important;
+            padding:0 !important;
+            gap: 0 .5rem !important;
+            font-weight: 700;
+
+        }
+    }
+    .copyright {
+        font-size: 1.5rem !important;
+        margin-top: 2rem !important;
+    }
+}
