--- a/resources/sass/blocks/_header.scss
+++ b/resources/sass/blocks/_header.scss
@@ -5,15 +5,15 @@ header.header {
     }
     .wrapper {
         padding: 1rem 0;
-        display: flex;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
        .nav {
            display: flex;
            align-items: center;
            justify-content: space-between;
 
            .btn-danger {
-               font-size: 2.8rem;
+               font-size: 2.5rem;
                border-radius: 1rem;
                background-color: #ff000a;
                text-transform: uppercase;
@@ -22,7 +22,7 @@ header.header {
            }
            .nav-link {
                color: #532f1c;
-               font-size: 2.8rem;
+               font-size: 2.5rem;
                cursor: pointer;
                font-weight: 700;
                a {
