--- a/resources/sass/blocks/_prize.scss
+++ b/resources/sass/blocks/_prize.scss
@@ -1,5 +1,5 @@
 section#prize {
-    background-image: url("/assets/prizebg.png");
+    background-image: url("/assets/prizebg2.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -46,8 +46,17 @@ section#prize {
                 flex-direction: column !important;
             }
         }
+        .prize_1 {
+            max-height: 24rem !important;
+        }
+        .prize_3 {
+            max-height: 35rem !important;
+        }
+        .prize_name {
+            font-size: 2.7rem !important;
+        }
         .frame {
-            
+
         }
     }
 }
